<resources>
    <string name="app_name">SentimentAnalysis</string>
    <string name="photo_data">拍摄于:%s</string>
    <string name="create_data">创建于:%s</string>
    <string name="no_data">暂时没有数据</string>
    <string name="photoPickerNotFoundText">沒有可用的图片！</string>
    <string name="need_sdcard_permission">需要sd卡权限</string>
    <string name="save">保存</string>
    <string name="analysis">分析中</string>
    <string name="launch_title">人体疲劳自测程序</string>
    <string name="author">西安交通大学生物医学工程</string>
    <string name="login_title">用户名</string>
    <string name="login_hint">请输入用户名</string>
    <string name="login">进入</string>
    <string name="new_account">新用户</string>
    <string name="old_account">老用户</string>
    <string name="photo">拍摄</string>
    <string name="sure">确定</string>
    <string name="error_account">无效的用户名，请重新输入！</string>
    <string name="unComplete_info">请完善信息！</string>
    <string name="change_account">切换账号</string>
    <string name="go_login">已有账号去登录</string>
    <string name="ori_photo">原型照片</string>
    <string name="test_photo">测试照片</string>
    <string name="base_photo_tips">请拍摄基底照片，并截取人眼部分作为实验样本</string>
    <string name="base_photo_save_tips">请重新登陆并开始拍摄进行实验</string>
    <string name="has_account">已有账号，请重新登陆</string>
    <string name="no_name">请输入用户名</string>
    <string name="feature_result">您当前的疲劳值为%s（疲劳值范围为0-100，0为不疲劳,100为疲劳）</string>
</resources>
