<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@color/color_light">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textColor="@color/color_dark"
        android:textSize="@dimen/text_size_25"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"/>
    <EditText
        android:id="@+id/login_EditText"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:hint="@string/login_hint"
        android:textColorHint="@color/color_9E9E9E"
        android:textSize="@dimen/text_size_16"
        android:gravity="center"
        android:background="@null"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="8dp"/>
    <Button
        android:id="@+id/login_Button"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_height="40dp"
        android:text="@string/login"
        android:textColor="@color/color_fafafa"
        android:textSize="@dimen/text_size_16"
        android:background="@color/color_1da9ff"
        android:gravity="center"/>
</LinearLayout>