<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.intsig.yann.analysis.AnalysisHolderActivity">
    <LinearLayout
        android:id="@+id/me_LineLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">
        <ImageView
            android:id="@+id/small_img_ImageView"
            android:layout_width="90dp"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/timg"/>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/status_detail_TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="@color/color_dark"
                android:textSize="@dimen/text_size_16"
                android:singleLine="true"
                android:ellipsize="end"
                android:text="测试"/>
            <TextView
                android:id="@+id/photo_date_TextView"
                android:gravity="left"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_14"
                android:textColor="@color/color_9E9E9E"
                android:text="@string/photo_data"/>
            <TextView
                android:id="@+id/change_account_TextView"
                android:gravity="right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_14"
                android:textColor="@color/color_9E9E9E"
                android:text="@string/change_account"/>
        </LinearLayout>

    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/history_RecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:scrollbars="none"
        android:layout_above="@+id/bottom_line_View"
        android:layout_below="@+id/me_LineLayout"/>
    <RelativeLayout
        android:id="@+id/empty_status_RelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_line_View"
        android:visibility="gone">
        <ImageView
            android:id="@+id/empty_icon_ImageView"
            android:layout_width="168dp"
            android:layout_height="128dp"
            android:src="@mipmap/emptystatus_smile"
            android:layout_centerInParent="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_A0A0A0"
            android:layout_below="@+id/empty_icon_ImageView"
            android:layout_centerHorizontal="true"
            android:text="@string/no_data"
            android:layout_marginTop="8dp"
            android:textSize="@dimen/text_size_14"/>
    </RelativeLayout>

    <View
        android:id="@+id/bottom_line_View"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_D7D7D7"
        android:layout_above="@+id/bottom_RelativeLayout"/>
    <RelativeLayout
        android:id="@+id/bottom_RelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/color_fafafa">
        <ImageView
            android:id="@+id/photo_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:src="@drawable/pick_icon_background" />
    </RelativeLayout>
</RelativeLayout>
